fix bug with page jumping when opening the modal window

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10098,6 +10098,14 @@ html {
 }
 /*----блок с результатми в хедере---*/
 
+/*----при открытии модалок появляется странный паддинг---*/
+
+body {
+    padding-right: 0 !important;
+}
+
+/*----при открытии модалок появляется странный паддинг---*/
+
 
 /*----вероятно удалить---*/
 .move-right {
