--- a/public/css/settingsPage/settingsPage.css
+++ b/public/css/settingsPage/settingsPage.css
@@ -1,1 +1,25 @@
+.settings-table-wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-column-gap: 25px;
+}
+.settings-table-wrapper .settings-table-tabs-wrapper {
+  min-width: 150px;
+}
+.settings-table-wrapper .settings-table-tabs-wrapper #v-pills-tab {
+  gap: 5px;
+}
+.settings-table-wrapper .settings-table-tabs-wrapper #v-pills-tab a[role=tab] {
+  text-align: center;
+}
 
+#infoModal .modal-dialog,
+#noteModal .modal-dialog,
+#updateModal .modal-dialog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
