--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -105,6 +105,14 @@ html {
 }
 /*----блок с результатми в хедере---*/
 
+/*----при открытии модалок появляется странный паддинг---*/
+
+body {
+    padding-right: 0 !important;
+}
+
+/*----при открытии модалок появляется странный паддинг---*/
+
 
 /*----вероятно удалить---*/
 .move-right {
